# chacha20stream

./: Cargo.toml  README.md  build.rs  test.c  test.sh
include/: cc20.h
src/: bytes.rs  cha.rs  ext.rs  ffi.rs  key.rs  lib.rs  stream.rs  stream_async.rs
src/ffi/: cookie.rs  error.rs  interop.rs  wrapper.c
src/stream/: mod.rs  sink.rs  source.rs
src/stream_async/: mod.rs  sink.rs  source.rs
