[package]
name = "chacha20stream"
version = "1.0.3"
keywords = ["chacha20_poly1305", "stream", "wrapper", "encryption", "decryption"]
description = "A writable wrapper stream for encryption and decryption with the stream cipher chacha20_poly1305"
homepage = "https://git.flanchan.moe/flanchan/chacha20stream"
repository = "https://github.com/notflan/chacha20stream"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"

[features]
default = ["smallvec", "ffi"]

# Enable async version with tokio v2.0 AsyncRead/AsyncWrite.
async = ["tokio", "pin-project"]

# Explicitly clear in-memory buffers with `explicit_bzero()` instead of normal `bzero()`.
explicit_clear = []

# Add C interface bindings
ffi = ["libc"]

[dependencies]
base64 = "0.13"
getrandom = "0.2"
libc = {version = "0.2.97", optional = true}
openssl = "0.10"
pin-project = {version = "1.0.6", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}
smallvec = {version = "1.6", features=["union"], optional = true}
tokio = {version = "0.2", optional = true}

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
tempfile = "3.2.0"
tokio = {version = "0.2", features=["full"]}
